minor style fixes for link spacing and line height.

--- a/css/screen.scss
+++ b/css/screen.scss
@@ -52,7 +52,7 @@ body:before {
     }
     p {
         color:#80808B;
-        line-height:1.8em;
+        line-height:1.85em;
         margin:0 0 1.85em;
     }
 }
@@ -69,10 +69,10 @@ body:before {
     }
     &-resume {
         margin-left:-0.25em;
-        margin-right:1em;
+        margin-right:0.8em;
     }
     &-twitter {
-        margin-right:0.75em;
+        margin-right:0.5em;
     }
     &-github {
         margin-right:0;
